--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
+
 * {
     font-family:'Courier New', Courier, monospace;
     color: #2f2a2b;
+    
 }
 
 html, body {
@@ -16,6 +18,7 @@ header {
 
 .title {
     color: #2f3e46;
+    padding: 34px;
 }
 
 section {
@@ -25,12 +28,16 @@ section {
 
 article {
     display: flex;
-    
     align-items:center;
     justify-content: center;
     text-align: center;
     font-size: large;
     font-weight: bold;
+    background-color: whitesmoke;
+    padding: 8px;
+    margin: auto;
+    border-radius: 10px;
+    max-width: 400px;
 }
 
 .description {
